<resources>
    <string name="app_name">FoxSoundi</string>
    <string name="title_genre">Genre</string>
    <string name="title_top50">Top 50</string>
    <string name="title_new">New</string>
    <string name="title_search">Search</string>
    <string name="title_account">Account</string>
    <string name="title_secondPage">Les genres de musiques :</string>
    <string name="title_activity_account">Sign in</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string-array name="search">
        <item>Ariana Grande</item>
        <item>Petit Biscuit</item>
        <item>Eminem</item>
        <item>50 cent</item>
        <item>David Guetta</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_optionss">OptionssActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="facebook_app_id">334726467232655</string>
    <string name="fb_login_protocol_scheme">fb334726467232655</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_media_controller">MediaControllerFragment</string>
    <string name="fragment_home">HomeFragment</string>
    <string name="fragment_category">CategoryFragment</string>
    <string name="fragment_playlist">PlaylistFragment</string>


    <!-- Firestore collections -->
    <string name="collection_audio">Audio</string>
    <string name="collection_music">Music</string>
    <string name="collection_podcasts">Podcasts</string>
    <string name="collection_content">Content</string>

    <!-- Firestore documents  -->
    <string name="document_categories">Categories</string>

    <!-- Firestore Fields -->
    <string name="field_categories">categories</string>
    <string name="field_media_id">media_id</string>
    <string name="field_media_url">media_url</string>
    <string name="field_artist">artist</string>
    <string name="field_date_added">date_added</string>
    <string name="field_description">description</string>
    <string name="field_title">title</string>


    <!-- Broadcast Receivers -->
    <string name="broadcast_seekbar_update">broadcast_seekbar_update</string>
    <string name="broadcast_seekbar_value">broadcast_seekbar_value</string>
    <string name="broadcast_update_ui">broadcast_update_ui</string>
    <string name="broadcast_new_media_id">broadcast_new_media_id</string>

    <string name="string_remove_from_playlist">Remove from playlist?</string>
    <string name="string_yes">yes</string>
    <string name="string_no">no</string>
    <string name="label_stop">Stop</string>
    <string name="label_pause">Pause</string>
    <string name="label_play">Play</string>
    <string name="label_play_pause">Play and pause toggle</string>
    <string name="label_previous">Previous track</string>
    <string name="label_next">Next track</string>


    <string name="categories">Categories</string>
</resources>
