<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:background="#000000"
              tools:context=".AccountActivity">



    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="217dp"
            tools:layout_editor_absoluteY="139dp"
            tools:layout_editor_absoluteX="0dp"
            android:id="@+id/imageView2"
            android:background="#030303"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" app:srcCompat="@drawable/foxsoundi"/>

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" android:gravity="center">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/prompt_email"
                        android:textColorHint="#3B4036"
                        android:textColor="#787878"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:typeface="sans"
                        android:drawableLeft="@drawable/ic_account_box_black_24dp"
                        android:background="#171915"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:hint="@string/prompt_password"
                        android:textColorHint="#3B4036"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:textColor="#787878"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:background="#171915"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:onClick="goConnection"
                    android:background="@drawable/button_radius"
                    android:textStyle="bold"/>

            <TextView
                    android:id="@+id/txtStatus"
                    android:text="hi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <com.facebook.login.widget.LoginButton
                    android:id="@+id/loginButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
